--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + React + TS</title>
+    <title>I-Music-Player</title>
   </head>
 
   <body>
-    <div id="root"></div>
+    <div id="root" class="bg-white"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
